[project]
name = "JiYuKiller"
version = "1.2.0"
description = "极域杀手"
authors = [{name = "Lv3R", email = "lv3r@qq.com"}]
license = {text = "MIT"}
dependencies = ["PySimpleGUI==4.60.5"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"